fix upgraded library from Alliance